# Pokemon-Game

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  requirements.txt
code/: __main__.py  asset_manager.py  battle.py  dialog.py  entities.py  evolution.py  groups.py  main.py  map_loader.py  monster.py  monster_index.py  settings.py  sprites.py  support.py  timer.py
code/data/: monster.py  trainer.py
code/settings/: settings.py
code/support/: assets_loading.py  game_utils.py  sprites_loading.py
data/maps/: fire.tmx  world.tmx
